Fixed active letter in zen mode when backspacing

--- a/src/components/styles/AuthForm.css
+++ b/src/components/styles/AuthForm.css
@@ -37,6 +37,7 @@
     padding-right: 0.5rem/* 8px */;
     background-color: var(--color-tertiary);
     caret-color: var(--color-secondary);
+    color: var(--color-iconstext-hover);
 }
 
 .auth-form-input::placeholder {
